--- a/client/static/css/client.css
+++ b/client/static/css/client.css
@@ -18,7 +18,7 @@ h1 a {
 #previous{
     position:absolute;
 	right:200px;
-	top:250px;
+	top:130px;
 }
 
 #search-form{
@@ -30,5 +30,32 @@ h1 a {
 
 label[for=id_food_name]{
     margin-left: 20px;
+
+}
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(even) {
+    background-color: #dddddd;
+}
+#results{
+    position:absolute;
+    top:270px;
+    right:1130px;
+}
+#results_table{
+    position:absolute;
+    top:330px;
+}
+#searcher-form{
 
 }
