additional files and changes for heroku

--- a/client/templates/client/search.html
+++ b/client/templates/client/search.html
@@ -19,7 +19,7 @@
         <h3>Previous Searches</h3>
         {% for search in previous_searches %}
         <div class="get">
-            <span> - {{search.food}} in {{search.location}}</span>
+            <a href=""> - {{search.food}} in {{search.location}}</a>
         </div>
         {% endfor %}
 
